--- a/public/partials/product-reviews.html
+++ b/public/partials/product-reviews.html
@@ -1,7 +1,7 @@
 <!--  Product Reviews List -->
+<h4>Reviews</h4>
 <ul>
-    <h4>Reviews</h4>
-    <li ng-repeat="review in product.reviews">
+    <li class="list-unstyled" ng-repeat="review in product.reviews">
         <blockquote>
             <strong>{{review.stars}} Stars</strong>
             {{review.body}}
@@ -14,7 +14,7 @@
 <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)">
 
     <!--  Live Preview -->
-    <blockquote >
+    <blockquote ng-show="reviewCtrl.review.body || reviewCtrl.review.stars || reviewCtrl.review.author">
         <strong>{{reviewCtrl.review.stars}} Stars</strong>
         {{reviewCtrl.review.body}}
         <cite class="clearfix">—{{reviewCtrl.review.author}}</cite>
